UI alignment fix

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -569,6 +569,10 @@ body {
   width: 200px;
 }
 
+.width-215px {
+  width: 215px;
+}
+
 .width-225px {
   width: 225px;
 }
